<resources>
	<string name="app_name">Silent Phone</string>
	<string name="silent_circle">SilentCircle</string>
	<string name="menu_settings">Menu</string>
	<string name="call_mgr_button">Call\nManager</string>
	<string name="hangup_call">End call</string>
	<string name="dismiss_call">Decline</string>
	<string name="answer_call">Answer</string>
	<string name="close_dialog">Close</string>
	<string name="cancel_dialog">Cancel</string>
	<string name="confirm_dialog">Confirm</string>
	<string name="provision_later">Later</string>
	<string name="prepare_antenna">Preparing &#8230;</string>
	<string name="to_server_only">to server</string>
	<string name="error_code">Error code: </string>
	<string name="accept_video">Accept</string>
	<string name="audio_only">Audio only</string>
	<string name="mute_video">Mute video</string>
	<string name="verify_button">Press to\nverify\nsecurity</string>
	<string name="verify_infotext_top">Compare with partner</string>
	<string name="verify_infotext_bottom">and enter partner’s name here</string>
	<string name="next">Next</string>
	<string name="back">Back</string>
	<string name="login">Login</string>
	<string name="logout">Logout</string>
	<string name="exit">Exit</string>
	<string name="settings">Settings</string>
    <string name="send_message">Send</string>
    <string name="companion_codes">Invitation codes</string>
    <string name="sip_state_calling">Calling&#8230;</string>
    <string name="sip_state_connecting">Connecting&#8230;</string>
    <string name="sip_state_ringing">Ringing</string>
    <string name="sip_state_ended">Call ended</string>
    <string name="sip_state_online">Online</string>
    <string name="sip_state_offline">Offline</string>
    <string name="call_duration">Duration</string>
    <string name="call_type_audio">Incoming call</string>
    <string name="call_type_video">Incoming video call</string>
    <string name="call_error">Error</string>
	<string name="secstate_secure">SECURE</string>
    <string name="secstate_not_secure">Not SECURE</string>
	<string name="crypto_peer_name">Peer name</string>
	<string name="crypto_peer_client">ZRTP Peer client</string>
	<string name="crypto_peer_client_id">ZRTP client ID</string>
	<string name="crypto_peer_client_proto">Protocol version</string>
	<string name="crypto_crypto_components">Crypto Components</string>
	<string name="crypto_crypto_components_tls">TLS Ciphers:</string>
	<string name="crypto_crypto_components_zhash">ZRTP Hash:</string>
	<string name="crypto_crypto_components_pk">Key Exchange:</string>
	<string name="crypto_crypto_components_cipher">Cipher:</string>
	<string name="crypto_crypto_components_hash">Hash:</string>
	<string name="crypto_crypto_components_sauth">SRTP Auth Tag:</string>
	<string name="crypto_shared_secrets">Shared Secrets</string>
	<string name="crypto_shared_secrets_rs1">RS1</string>
	<string name="crypto_shared_secrets_rs2">RS2</string>
	<string name="crypto_shared_secrets_aux">AUX</string>
	<string name="crypto_shared_secrets_pbx">PBX</string>
	<string name="call_mng_conference">Conference</string>
	<string name="call_mng_private">Private</string>
	<string name="call_mng_in_out">Incoming, outgoing</string>
	<string name="dialog_dial_hide">Hide</string>
	<string name="info_header_line">Client and device information</string>
	<string name="info_own_number">Own SilentPhone number:</string>
	<string name="info_build_number">SilentPhone client build:</string>
	<string name="info_device_info">Device information:</string>
	<string name="info_device_class">Device classification:</string>
	<string name="zrtp_we_header">ZRTP security message</string>
	<string name="zrtp_we_error">ZRTP Error</string>
	<string name="zrtp_we_warn">ZRTP Warning</string>
    <string name="srtp_we_warn">SRTP Warning</string>
	<string name="zrtp_show_details">Show details</string>
    <string name="zrtp_hide_details">Hide details</string>
	<string name="provisioning_infotext">Account Creation</string>
	<string name="provisioning_vertu_welcome">Welcome to Silent Circle in partnership with Vertu</string>
	<string name="provisioning_stepinfo_1">Step 1 of 2</string>
	<string name="provisioning_stepinfo_2">Step 2 of 2</string>
	<string name="provisioning_username">Please enter a username</string>
	<string name="provisioning_username_hint">Username</string>
	<string name="provisioning_password">Password for SilentPhone (enter twice)</string>
	<string name="provisioning_password_hint">Enter password</string>
	<string name="provisioning_password_hint2">Enter password (verify)</string>
	<string name="provisioning_firstname">First Name</string>
	<string name="provisioning_firstname_hint">Enter first name</string>
	<string name="provisioning_lastname">Last Name</string>
	<string name="provisioning_lastname_hint">Enter last_name</string>
	<string name="provisioning_email_info">Required to recover your user name or password</string>
	<string name="provisioning_email_hint">E-mail address</string>
	<string name="provisioning_code">Activation code</string>
	<string name="provisioning_no_network">Network not available: </string>
	<string name="provisioning_no_data">No provisioning data available</string>
	<string name="provisioning_wrong_format">Wrong data format: </string>
	<string name="provisioning_error">Provisioning Error</string>
	<string name="provisioning_info">Information</string>
	<string name="provisioning_user_req">Username is required. Please check.</string>
	<string name="provisioning_psn_invalid">No valid serial number found!</string>
	<string name="provisioning_password_req">Password is required. Please check.</string>
	<string name="provisioning_password_match">Passwords do not match. Please check.</string>
	<string name="provisioning_firstname_req">A first name is required. Please check.</string>
	<string name="provisioning_lastname_req">A last name is required. Please check.</string>
	<string name="provisioning_email_req">An email address is required. Please check.</string>
	<string name="provisioning_already_registered">Device already registered.</string>
	<string name="provisioning_pwstrength_weak">Password strength: WEAK</string>
	<string name="provisioning_pwstrength_good">Password strength: GOOD</string>
	<string name="provisioning_pwstrength_strong">Password strength: STRONG</string>
	<string name="provisioning_show_pw">Show password</string>
	<string name="provisioning_privacy_tc">I have read and accepted the privacy policy and terms and conditions from  www.silentcircle.com</string>
	<string name="provisioning_get_news">I would like to receive exclusive news and invitations from Services</string>
	<string name="provisioning_welcome_long">As a Vertu Customer you enjoy 12 months of complimentary access to SilentCircle’s encrypted communications services.</string>
	<string name="provisioning_new_account">Create new account</string>
	<string name="provisioning_existing_account">Login to existing account</string>
	<string name="provisioning_check_tc">Please accept and check the terms and conditions</string>
	<string name="provisioning_create">Create</string>
	<string name="provisioning_get_activation_code">Please login to your account at\nwww.silentcircle.com\nto retrieve an activation code.</string>
	<string name="key_generation_info">Generating keys, please standby.</string>
	<string name="key_generation_error">Error during key generation</string>
	<string name="key_generation_missing_key">Cannot retrieve previously generated secret key.</string>
	<string name="key_generation_wrong_key">Selected key name does not match expected key name.</string>
	<string name="key_generation_error_key">Cannot read and decode stored secret key.</string>
	<string name="key_generation_storage_fail">Could not store the generated secret key.</string>
	<string name="key_generation_error_key_generation">Cannot generate a secret key: </string>
	<string name="key_generation_error_not_rsa_key">Data not a private RSA key.</string>
	<string name="thanks_top_line">Thank you, your SilentCircle phone number is</string>
	<string name="thanks_bottom_line">To manage your SilentCircle account please go to\nwww.silentcircle.com</string>
	<string name="sas_explanation">You should verbally compare this authentication code with your partner. If it doesn’t match, it indicates the presence of a wiretapper.</string>
    <string name="companion_vertu_welcome">Welcome to Silent Circle in partnership with Vertu.\nWe have provided you with five 30 day guest passes to use with your family and friends.\nTo invite others to SilentCircle please send them an invitation code to activate their 30 day guest pass.</string>
    <plurals name="companion_codes_available">
        <item quantity="one">You have one available invitation code.</item>
        <item quantity="other">You have %1$d available invitation codes.</item>
    </plurals>
    <string name="companion_sms_text">Welcome to SilentCircle. Please enter your invitation code %1$s at <font fgcolor="#ffffffff">accounts.silentcircle.com</font> to create your free account.</string>
    <string name="companion_manage_info">More options to manage your invitation codes are available at <font fgcolor="#ffffffff">accounts.silentcircle.com</font></string>
	<string name="caller_image">Image of caller</string>
	<string name="signal_strength">Signal quality</string>
	<string name="country_flag">Country flag</string>
	<string name="mute_image_button">Mute audio</string>
	<string name="incall_dial_image_button">Dial number during call</string>
	<string name="speaker_image_button">Switch speaker on/off</string>
	<string name="add_call_image_button">Add another call</string>
	<string name="add_video_image_button">Start video call</string>
	<string name="dial_image_button">Dial number</string>
	<string name="contacts_image_button">Open contacts</string>
	<string name="recent_image_button">Display recent calls</string>
	<string name="backspace_image_button">Delete character</string>
	<string name="end_call_image_button">End call</string>
	<string name="answer_call_image_button">Answer call</string>
	<string name="video_audio_mute">Toggle mute audio</string>
	<string name="video_switch_camera">Switch cameras</string>
	<string name="crypto_padlock">Padlock to show security state</string>
	<string name="description_image_button_one">one</string>
	<string name="description_image_button_two">two</string>
	<string name="description_image_button_three">three</string>
	<string name="description_image_button_four">four</string>
	<string name="description_image_button_five">five</string>
	<string name="description_image_button_six">six</string>
	<string name="description_image_button_seven">seven</string>
	<string name="description_image_button_eight">eight</string>
	<string name="description_image_button_nine">nine</string>
	<string name="description_image_button_star">star</string>
	<string name="description_image_button_zero">zero</string>
	<string name="description_image_button_pound">pound</string>
	<string name="description_dial_button">dial</string>
	<string name="description_delete_button">backspace</string>
	<string name="zrtp_common_cmp">"You should verbally compare the authentication code with the person you are calling. If it doesn’t match, it indicates that someone may have intercepted the call."</string>
    <string name="zrtp_common_cls">Connection Error. Please close and call again.</string>
    <string name="zrtp_common_upd">The person you are calling needs to update their Silent Phone application to the latest version</string>
    <string name="zrtp_common_app">Application Error. Please re-install Silent Phone.</string>
	<string name="s1_c001">Hello received, preparing a Commit</string>
	<string name="s1_c001_explanation"></string>
	<string name="s1_c002">Commit: Generated a public DH key</string>
	<string name="s1_c002_explanation"></string>
	<string name="s1_c003">Responder: Commit received, preparing DHPart1</string>
</resources>