<!--
Copyright © 2004-2012 Tivi LTD,www.tiviphone.com. All rights reserved.
Copyright © 2012-2013, Silent Circle, LLC. All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:
    * Any redistribution, use, or modification is done solely for personal 
      benefit and not for any commercial purpose or for monetary gain
    * Redistributions of source code must retain the above copyright
      notice, this list of conditions and the following disclaimer.
    * Redistributions in binary form must reproduce the above copyright
      notice, this list of conditions and the following disclaimer in the
      documentation and/or other materials provided with the distribution.
    * Neither the name Silent Circle nor the
      names of its contributors may be used to endorse or promote products
      derived from this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL SILENT CIRCLE, LLC BE LIABLE FOR ANY
DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal"
	android:background="@color/silent_black" >

    <ImageView
    	android:id="@+id/InfoLogoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/sc_logo_white" />

    <!-- Header -->

	<TextView
		android:id="@+id/ThanksTopLine"
		style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="@dimen/provisioning_left_margin"
		android:layout_marginRight="@dimen/provisioning_right_margin"
		android:layout_marginTop="8dp"
		android:gravity="center_horizontal"
		android:text="@string/thanks_top_line"
		android:textSize="16sp" />

    <TextView
            android:id="@+id/ThanksNumber"
            style="@style/TextAppearanceTranslucent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ThanksTopLine"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/provisioning_left_margin"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/thanks_number"/>

    <TextView
		android:id="@+id/ThanksNumberInfo"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/provisioning_right_margin"
        android:layout_alignBaseline="@+id/ThanksNumber"
		android:textSize="20sp" />

    <TextView
            android:id="@+id/ThanksName"
            style="@style/TextAppearanceTranslucent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ThanksNumber"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/provisioning_left_margin"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:text="@string/thanks_name"/>

    <TextView
            android:id="@+id/ThanksNameInfo"
            style="@style/TextAppearanceTranslucent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/provisioning_right_margin"
            android:layout_alignBaseline="@+id/ThanksName"
            android:textSize="20sp"/>


    <TextView
		android:id="@+id/ThanksBottomLine"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/ThanksName"
		android:layout_centerHorizontal="true"
		android:layout_marginLeft="@dimen/provisioning_left_margin"
		android:layout_marginRight="@dimen/provisioning_right_margin"
		android:layout_marginTop="8dp"
		android:gravity="center_horizontal"
		android:text="@string/thanks_bottom_line"
		android:textSize="16sp" />

    <!-- Key manager status line -->
    <TextView
        android:id="@+id/InfoKeyManager"
        style="@style/TextAppearanceTranslucent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/InfoBuildNumber"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/provisioning_left_margin"
        android:layout_marginTop="5dp"
        android:background="@null"
        android:textSize="12sp" />

	<!-- build number -->

	<TextView
		android:id="@+id/InfoBuildNumber"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/InfoDeviceInfo"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/provisioning_left_margin"
		android:layout_marginTop="5dp"
		android:background="@null"
		android:text="@string/info_build_number"
		android:textSize="12sp" />

	<TextView
		android:id="@+id/InfoBuildNumberInfo"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/provisioning_right_margin"
		android:layout_alignTop="@+id/InfoBuildNumber"
		android:background="@null"
		android:textSize="12sp" />

	<!-- device information -->

	<TextView
		android:id="@+id/InfoDeviceInfo"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_above="@+id/InfoDeviceClass"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/provisioning_left_margin"
		android:layout_marginTop="5dp"
		android:text="@string/info_device_info"
		android:textSize="12sp"
		android:visibility="invisible"/>

	<TextView
		android:id="@+id/InfoDeviceInfoInfo"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/provisioning_right_margin"
		android:layout_alignTop="@+id/InfoDeviceInfo"
		android:textSize="12sp"
		android:visibility="invisible"/>

	<!-- device classification -->

	<TextView
		android:id="@+id/InfoDeviceClass"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/provisioning_left_margin"
 		android:layout_alignParentBottom="true"
		android:layout_marginTop="5dp"
		android:text="@string/info_device_class"
		android:textSize="12sp"
		android:visibility="invisible"/>

	<TextView
		android:id="@+id/InfoDeviceClassInfo"
        style="@style/TextAppearanceTranslucent"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/provisioning_right_margin"
		android:layout_alignTop="@+id/InfoDeviceClass"
		android:textSize="12sp"
		android:visibility="invisible"/>

</RelativeLayout>
